# xy-opencv-opencl

./: .gitignore  CMakeLists.txt
include/: opencv-opencl.hpp  threads.hpp
src/: CMakeLists.txt  helloWorld.cl  main.cpp  opencv-opencl.cpp  threads.cpp
test-opencv-header-for-opencl/: CMakeLists.txt  hello_world.cl  main.cpp  second.cl
test-opencv-opencl-on-cpu/: CMakeLists.txt  hello_world.cl  main.cpp
